# sutra-trans-playground

./: .env.sample  .gitignore  api_configs.json  app.py  llm_client.py  main.py  pyproject.toml
assets/: index.html  script.js  styles.css
prompt-templates/: Question1.txt  Question2.txt  Question3.txt  templ11.txt  templ4.txt
