[project]
name = "sutra-translation-playground"
version = "0.5.0"
description = "CLI tool and Web UI for comparing the results of sutra text translation by calling LLM APIs(metaso and deepseek, etc.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]
